--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,22 @@
-version: 2.1
-
-orbs:
-  maven: circleci/maven@0.0.12
+version: 2
 jobs:
-  maven/test:
+  build:
+    working_directory: ~/circleci-feature9
     docker:
-      - image: circleci/openjdk:8-jdk-node
+      - image: maven:3.5.0-jdk-9
+
     steps:
       - checkout
-      - run:
-          name: Generate Cache Checksum
-          command: find . -name 'pom.xml' | sort | xargs cat > /tmp/maven_cache_seed
+
       - restore_cache:
-          key: maven-{{ checksum "/tmp/maven_cache_seed" }}
-      - run:
-          name: Install Dependencies
-          command: mvn dependency:go-offline --settings 'pom.xml'
-      - run:
-          name: Run Tests
-          command: mvn verify test
+          key: circleci-feature9-{{ checksum "pom.xml" }}
+
+      - run: mvn test
+
       - save_cache:
           paths:
             - ~/.m2
-          key: maven-{{ checksum "/tmp/maven_cache_seed" }}
+          key: circleci-feature9-{{ checksum "pom.xml" }}
+
       - store_test_results:
           path: target/surefire-reports
-workflows:
-  maven_test:
-    jobs:
-      - maven/test # checkout, build, test, and upload test results
