--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,9 +11,14 @@ jobs:
           keys:
             - v1-dependencies{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: mvn clean install
+      - run: mvn dependency:go-offline
       - save_cache:
           paths:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
-      - run: mvn clean test
+      - run:
+          name: "Run tests"
+          command: >
+            -mvn
+            -Dsuite=testng
+            -clean test
