--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
-version: 2
+version: 2.1
 jobs:
-  build:
-    working_directory: ~/crashCourseTestRepo
+  first-job:
     docker:
-      - image: maven:3.5.0-jdk-9
-
+      - image: maven:3.6.3-jdk-11
+      - image: circleci/openjdk:11-jdk
     steps:
       - checkout
       - restore_cache:
@@ -17,8 +16,13 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
       - run:
-          name: "Run tests"
+          name: Run tests
           command: >
             -mvn
             -Dsuite=testng
             -clean test
+workflows:
+  version: 2.1
+  test_workflow:
+    jobs:
+      - first-job
