--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <allure.version>2.13.1</allure.version>
         <suite.name>testng.xml</suite.name>
         <spring-framework.version>4.0.2.RELEASE</spring-framework.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
