--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,22 @@
 version: 2.1
-jobs:
-  setup-project:
+
+executors:
+  my-executor:
     docker:
       - image: maven:3.6.3-jdk-11
       - image: selenium/standalone-chrome:3.11.0
+    working_directory: ~/atc
+    environment:
+      MAVEN_OPTS: -Xmx3200m
+
+orbs:
+  slack: circleci/slack@3.4.2
+
+commands:
+  setup-project:
+    description: "Setup project"
     steps:
       - checkout
-      - setup_remote_docker
       - restore_cache:
         keys:
           - v1-dependencies{{ checksum "pom.xml" }}
@@ -21,6 +31,7 @@ jobs:
       - store_artifacts:
         - path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
   run-selenium-server:
+    description: "Run selenium server"
     steps:
       - run:
         name: create docker network
@@ -32,16 +43,25 @@ jobs:
         name: install selenium chrome
         command: docker run -d --net grid -e HUB_HOST=selenium-hub -v /dev/shm:/dev/shm selenium/node-chrome:3.141.59-20200326
   run-suite:
-    - run:
-      name: Run tests
-      command: >
-        mvn
-        -Dsuite=testng
-        clean test
-workflows:
-  version: 2.1
-  test_workflow:
-    jobs:
+    description: "Run suite"
+    steps:
+      - run:
+        name: Run tests
+        command: >
+          mvn
+          -Dsuite=testng
+          clean test
+
+jobs:
+  general_job:
+    executor: my-executor
+    steps:
       - setup-project
       - run-selenium-server
       - run-suite
+
+workflow:
+  version: 2.1
+  build:
+    jobs:
+      - general_job
