--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,12 +5,6 @@ executors:
     docker:
       - image: maven:3.6.3-jdk-11
       - image: selenium/standalone-chrome:3.11.0
-    working_directory: ~/atc
-    environment:
-      MAVEN_OPTS: -Xmx3200m
-
-orbs:
-  slack: circleci/slack@3.4.2
 
 commands:
   setup-project:
@@ -24,41 +18,42 @@ commands:
       - run: mvn dependency:go-offline
       - save_cache:
         paths:
-          - ~/.m2
+            - ~/.m2
         key: v1-dependencies-{{ checksum "pom.xml" }}
       - store_test_results:
-        path: target/surefire-reports
+          path: target/surefire-reports
       - store_artifacts:
-        - path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
-  run-selenium-server:
+          path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
+
+  selenium-server:
     description: "Run selenium server"
     steps:
       - run:
-        name: create docker network
-        command: docker network create grid
+          name: create docker network
+          command: docker network create grid
       - run:
-        name: install selenium hub
-        command: docker run -d -p 4444:4444 --net grid --name selenium-hub selenium/hub:3.141.59-20200326
+          name: install selenium hub
+          command: docker run -d -p 4444:4444 --net grid --name selenium-hub selenium/hub:3.141.59-20200326
       - run:
-        name: install selenium chrome
-        command: docker run -d --net grid -e HUB_HOST=selenium-hub -v /dev/shm:/dev/shm selenium/node-chrome:3.141.59-20200326
-  run-suite:
+          name: install selenium chrome
+          command: docker run -d --net grid -e HUB_HOST=selenium-hub -v /dev/shm:/dev/shm selenium/node-chrome:3.141.59-20200326
+  suite:
     description: "Run suite"
     steps:
       - run:
-        name: Run tests
-        command: >
-          mvn
-          -Dsuite=testng
-          clean test
+          name: Run tests
+          command: >
+            mvn
+            -Dsuite=testng
+            clean test
 
 jobs:
   general_job:
     executor: my-executor
     steps:
       - setup-project
-      - run-selenium-server
-      - run-suite
+      - selenium-server
+      - suite
 
 workflow:
   version: 2.1
