--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,22 @@ executors:
     my-executor:
         docker:
             - image: maven:3.6.3-jdk-11
+            #- image: circleci/openjdk:9.0.4-jdk
             - image: selenium/standalone-chrome:3.11.0
 
 commands:
     setup-project:
         description: "Setup project"
+        environment:
+            # Customize the JVM maximum heap limit
+            MAVEN_OPTS: -Xmx3200m
         steps:
             - checkout
             - restore_cache:
                 keys:
                     - v1-dependencies{{ checksum "pom.xml" }}
                     - v1-dependencies-
+            - run: mvn install
             - run: mvn dependency:go-offline
             - save_cache:
                 paths:
@@ -28,7 +33,6 @@ commands:
     selenium-server:
         description: "Run selenium server"
         steps:
-            - checkout
             - run: mkdir test-reports
             - run:
                 name: Download Selenium
@@ -42,7 +46,6 @@ commands:
     suite:
         description: "Run suite"
         steps:
-            - checkout
             - run:
                 name: Run tests
                 command: >
