--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,6 @@ executors:
             #- image: maven:3.6.3-jdk-11
             - image: circleci/openjdk:9.0.4-jdk
             - image: selenium/standalone-chrome:3.11.0
-        environment:
-            # Customize the JVM maximum heap limit
-            MAVEN_OPTS: -Xmx3200m
 
 commands:
     setup-project:
@@ -33,6 +30,7 @@ commands:
     selenium-server:
         description: "Run selenium server"
         steps:
+            - checkout
             - run: mkdir test-reports
             - run:
                 name: Download Selenium
@@ -46,6 +44,7 @@ commands:
     suite:
         description: "Run suite"
         steps:
+            - checkout
             - run:
                 name: Run tests
                 command: mvn clean test
