--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ executors:
         docker:
             - image: maven:3.6.3-jdk-11
             - image: selenium/standalone-chrome:3.11.0
+        environment:
+            # Customize the JVM maximum heap limit
+            MAVEN_OPTS: -Xmx3200m
 
 commands:
     setup-project:
@@ -15,6 +18,7 @@ commands:
                 keys:
                     - v1-dependencies{{ checksum "pom.xml" }}
                     - v1-dependencies-
+            - run: mvn install
             - run: mvn dependency:go-offline
             - save_cache:
                 paths:
