--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>src/test/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -148,9 +154,9 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
-<!--                    <suiteXmlFiles>
+                    <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/suits/${suite.name}</suiteXmlFile>
-                    </suiteXmlFiles>-->
+                    </suiteXmlFiles>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
                 <dependencies>
