--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,13 @@
-version: 2.1
+version: 2
 
 executors:
     my-executor:
         docker:
-            - image: maven:3.6.3-jdk-11
-            - image: selenium/standalone-chrome:3.11.0
-        working_directory: ~/atc
+            - image: circleci/openjdk:11.0.3-jdk-stretch
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
+            _JAVA_OPTIONS: "-Xmx3g"
 
 orbs:
     slack: circleci/slack@3.4.2
@@ -22,32 +21,24 @@ commands:
                 keys:
                     - v1-dependencies{{ checksum "pom.xml" }}
                     - v1-dependencies-
-            - run: mvn install
             - run: mvn dependency:go-offline
             - save_cache:
                 paths:
                     - ~/.m2
                 key: v1-dependencies-{{ checksum "pom.xml" }}
-            - store_test_results:
-                path: target/surefire-reports
-            - store_artifacts:
-                path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
-    suite:
-        description: "Run suite"
-        steps:
-            - run:
-                name: Run tests
-                command: mvn clean test
+
+            -   run:
+                    name: Run tests
+                    command: mvn integration-test
 
 jobs:
     general_job:
         executor: my-executor
         steps:
             - setup-project
-            - suite
 
 workflows:
-    version: 2.1
+    version: 2
     build:
         jobs:
             - general_job
