--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ executors:
     my-executor:
         docker:
             - image: circleci/openjdk:11.0.3-jdk-stretch
+        working_directory: ~/atc
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
@@ -27,15 +28,19 @@ commands:
                     - ~/.m2
                 key: v1-dependencies-{{ checksum "pom.xml" }}
 
-            -   run:
-                    name: Run tests
-                    command: mvn integration-test
+    suite:
+        description: "Run suite"
+        steps:
+            - run:
+                name: Run tests
+                command: mvn integration-test
 
 jobs:
     general_job:
         executor: my-executor
         steps:
             - setup-project
+            - suite
 
 workflows:
     version: 2.1
