--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
     my-executor:
         docker:
-            - image: circleci/openjdk:11.0.3-jdk-stretch
+            - image: circleci/openjdk:8-jdk
         working_directory: ~/atc
         environment:
             # Customize the JVM maximum heap limit
