--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,7 @@ version: 2.1
 executors:
     my-executor:
         docker:
-            - image: circleci/openjdk:8-jdk
-        working_directory: ~/atc
+            - image: circleci/openjdk:11.0.3-jdk-stretch
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
@@ -28,19 +27,15 @@ commands:
                     - ~/.m2
                 key: v1-dependencies-{{ checksum "pom.xml" }}
 
-    suite:
-        description: "Run suite"
-        steps:
-            - run:
-                name: Run tests
-                command: mvn integration-test
+            -   run:
+                    name: Run tests
+                    command: mvn integration-test
 
 jobs:
     general_job:
         executor: my-executor
         steps:
             - setup-project
-            - suite
 
 workflows:
     version: 2.1
