--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,11 +3,11 @@ version: 2.1
 executors:
     my-executor:
         docker:
-            - image: circleci/openjdk:11.0.3-jdk-stretch
+            - image: maven:3.6.3-jdk-11
+        working_directory: ~/atc
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
-            _JAVA_OPTIONS: "-Xmx3g"
 
 orbs:
     slack: circleci/slack@3.4.2
@@ -18,24 +18,32 @@ commands:
         steps:
             - checkout
             - restore_cache:
-                keys:
-                    - v1-dependencies{{ checksum "pom.xml" }}
-                    - v1-dependencies-
+                  keys:
+                      - v1-dependencies{{ checksum "pom.xml" }}
+                      - v1-dependencies-
+            - run: mvn install
             - run: mvn dependency:go-offline
             - save_cache:
-                paths:
-                    - ~/.m2
-                key: v1-dependencies-{{ checksum "pom.xml" }}
-
-            -   run:
-                    name: Run tests
-                    command: mvn integration-test
+                  paths:
+                      - ~/.m2
+                  key: v1-dependencies-{{ checksum "pom.xml" }}
+            - store_test_results:
+                  path: target/surefire-reports
+            - store_artifacts:
+                  path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
+    suite:
+        description: "Run suite"
+        steps:
+            - run:
+                  name: Run tests
+                  command: mvn clean test
 
 jobs:
     general_job:
         executor: my-executor
         steps:
             - setup-project
+            - suite
 
 workflows:
     version: 2.1
