--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,11 @@ version: 2.1
 executors:
     my-executor:
         docker:
-            - image: maven:3.6.3-jdk-11
-        working_directory: ~/atc
+            - image: circleci/openjdk:14-jdk-buster
+        working_directory: ~/repo
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
-
-orbs:
-    slack: circleci/slack@3.4.2
 
 commands:
     setup-project:
@@ -21,7 +18,7 @@ commands:
                   keys:
                       - v1-dependencies-{{ checksum "pom.xml" }}
                       - v1-dependencies-
-            - run: mvn install
+            - run: mvn clean install
             - run: mvn dependency:go-offline
             - save_cache:
                   paths:
@@ -31,19 +28,13 @@ commands:
                   path: target/surefire-reports
             - store_artifacts:
                   path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
-    suite:
-        description: "Run suite"
-        steps:
-            - run:
-                  name: Run tests
-                  command: mvn clean test
+            -run: mvn test
 
 jobs:
     general_job:
         executor: my-executor
         steps:
             - setup-project
-            - suite
 
 workflows:
     version: 2.1
