--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,8 @@ version: 2.1
 executors:
     my-executor:
         docker:
-            - image: circleci/openjdk:14-jdk-buster
-        working_directory: ~/repo
+            - image: circleci/openjdk:9.0-jdk
+        working_directory: ~/atc
         environment:
             # Customize the JVM maximum heap limit
             MAVEN_OPTS: -Xmx3200m
@@ -28,7 +28,7 @@ commands:
                   path: target/surefire-reports
             - store_artifacts:
                   path: target/crashCourseTestRepo-1.0-SNAPSHOT.jar
-            - run: mvn test
+            - run: mvn clean test
 
 jobs:
     general_job:
