--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -126,8 +126,10 @@ workflows:
     nightly:
         triggers:
             - schedule:
-                cron: "0 10 * * *"
+                cron: "* * * * *"
                 filters:
                     branches:
                         only:
                             - master
+        jobs:
+            - general_job
