--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
         steps:
             - allure-install
             - checkout
-            - run: chmod -R 777 ./tmp
+            - run: chmod -R 777 ./repository
             - restore_cache:
                   keys:
                       - v1-dependencies-{{ checksum "pom.xml" }}
