--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ commands:
         steps:
             - allure-install
             - checkout
+            - run: chmod -R 777 /root/tmp
             - restore_cache:
                   keys:
                       - v1-dependencies-{{ checksum "pom.xml" }}
