--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,6 +39,8 @@ commands:
 
             - run: >
                 mvn
+                -X
+                -DforkCount=0
                 -Dsuite=<< parameters.suite >>
                 clean verify site
 
