--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <aspectj.version>1.9.5</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <testng.version>6.14.3</testng.version>
+        <testng.version>7.0.0-beta1</testng.version>
         <allure.version>2.13.1</allure.version>
         <spring-framework.version>4.0.2.RELEASE</spring-framework.version>
     </properties>
@@ -67,13 +67,11 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>4.2.0</version>
-            <scope>compile</scope>
         </dependency>
 
         <!---->
@@ -148,6 +146,8 @@
                         <suiteXmlFile>src/test/resources/suits/${suite}.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <useSystemClassLoader>false</useSystemClassLoader>
+                    <parallel>instance</parallel>
+                    <threadCount>10</threadCount>
                 </configuration>
 
                 <dependencies>
