--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ commands:
                 mvn
                 -DforkCount=0
                 -Dsuite=<< parameters.suite >>
-                clean verify site
+                clean verify test
 
             - allure-report:
                   results-path: target/allure-results
