--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ commands:
             - run: >
                 mvn
                 -Dsuite=<< parameters.suite >>
-                clean verify test
+                test
 
             - allure-report:
                   results-path: target/allure-results
