--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
         <aspectj.version>1.9.5</aspectj.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <testng.version>7.0.0-beta1</testng.version>
+        <testng.version>6.14.3</testng.version>
         <allure.version>2.13.1</allure.version>
         <spring-framework.version>4.0.2.RELEASE</spring-framework.version>
     </properties>
@@ -146,9 +146,7 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>src/test/resources/suits/${suite}.xml</suiteXmlFile>
                     </suiteXmlFiles>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <parallel>false</parallel>
-                    <threadCount>1</threadCount>
+                    <useSystemClassLoader>true</useSystemClassLoader>
                 </configuration>
 
                 <dependencies>
