--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,7 +40,7 @@ commands:
             - run: >
                 mvn
                 -Dsuite=<< parameters.suite >>
-                test
+                verify test
 
             - allure-report:
                   results-path: target/allure-results
